# AgroVision

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/streamlit/: Detection.py  Home.py  VRA.py
configs/: vra.yaml  yolo.yaml
scripts/: run_detection.py  run_vra_mapping.py
src/agrovision/: config.py
src/agrovision/core/: detection.py  geoprocess.py  mapping.py
src/agrovision/data/: geo_utils.py  loaders.py  transforms.py
src/agrovision/interfaces/: cli.py  streamlit_app.py
src/agrovision/models/: yolo.py
src/agrovision/pipelines/: detect_weeds.py  vra_mapping.py
src/agrovision/utils/: file_utils.py
