[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agrovision"
version = "0.0.1"
authors = [
  { name="Jeorge Silva", email="jeorge.c.silva@gmail.com" },
]
description = "Precision Weed Detection & VRA Mapping"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jeorgesilva/agrovision-ai"
"Bug Tracker" = "https://github.com/jeorgesilva/agrovision-ai/issues"
